<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".AddGroceryItems">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/arbutus_slab"
                android:gravity="center|start"
                android:paddingStart="10dp"
                android:text="@string/Grocery_Text_name"
                android:textColor="#8C5EFA"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/arbutus_slab"
                android:hint="@string/Grocery_Text_Hint_Name"
                android:background="@drawable/edit_text_border"
                android:inputType="textPersonName"
                android:paddingStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/arbutus_slab"
                android:gravity="center|start"
                android:paddingStart="10dp"
                android:text="@string/Grocery_Text_Category"
                android:textColor="#FF8C5EFA"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="#FF8C5EFA"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/arbutus_slab"
                android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/arbutus_slab"
                android:gravity="center|start"
                android:paddingStart="10dp"
                android:text="@string/Grocery_Text_Quantity"
                android:textColor="#FF8C5EFA"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:fontFamily="@font/arbutus_slab"
                android:hint="@string/Grocery_Text_Quantity_Hint"
                android:inputType="number"
                android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/arbutus_slab"
                android:gravity="center|start"
                android:paddingStart="10dp"
                android:text="@string/Grocery_Text_Unit"
                android:textColor="#FF8C5EFA"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/units"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="#FF8C5EFA"
                android:background="@drawable/edit_text_border" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/arbutus_slab"
                android:gravity="center|start"
                android:paddingStart="10dp"
                android:text="@string/Grocery_Text_Price"
                android:textColor="#FF8C5EFA"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/itemPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/arbutus_slab"
                android:hint="@string/Grocery_Text_Price_Hint"
                android:inputType="numberDecimal"
                android:paddingStart="10dp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center"
        android:text="@string/BTN_SUBMIT"
        android:textAllCaps="false"
        android:textColor="#F4F0F0"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>